syntax="proto3";
package IM.Message;
option optimize_for = LITE_RUNTIME;

//service id  0x0003
message IMMsgData{
	//cmd id:		0x0301
	string type = 1;    // 消息大类型
	string subtype = 2; // 消息子类型
	string from = 3;	// 消息发送方
	string to = 4;		// 消息接受方
	string seq = 5;     // 序列号，发送方维护
	string msg_id = 6;  // 服务端维护
	bytes msg_data = 7; // 消息数据，json格式
	string rcv_id = 8;  // 消息下发
	string create_time = 9; // 服务端时间戳
}

message IMMsgDataAck{
	//cmd id:		0x0302
	string err_code = 1;	// 0:发送成功，msg_id有效；1+：发送失败，错误消息参考err_msg, msg_id无效
	string err_msg = 2;     // 错误消息
	string msg_id = 3;      // 发送成功后server会改写为实际的消息ID
	string ack_to =4; 		// 消息发送时的seq
	string create_time = 5; // 消息对应服务器时间戳
}

message IMMsgDataRead{  			// 已读确认
	string uid = 1;					// 发送此信令的用户id，即读消息的人
	string cid = 2;					// 所属gid或rid
	string msg_id = 3;				// 已读消息的id
	string origin_uid = 4;      	// 已读消息的原始发送人
	string msg_subtype = 5;			// 已读消息的类型（扩展用，可以对bot信息做进特殊处理)
	int32 unread_cnt = 6;			// 消息未读数
}

message IMGroupChange{
  string uid = 1;
  string change_type = 2;
  string gid = 3;
  repeated string cur_uid_list = 4;      //现有的成员id
  repeated string chg_uid_list = 5;      //add: 表示添加成功的id,   del: 表示删除的id
}

